--- a/src/scss/slidebar.scss
+++ b/src/scss/slidebar.scss
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   background-color: white;
-  color:whitesmoke;
+  color:#2D3250;
 
   .bg {
     position: fixed;
@@ -12,7 +12,7 @@
     left: 0;
     bottom: 0;
     width: 300px;
-    background: #7077A1;
+    background: #D3D3D3;
 
     .links {
       position: absolute;
