--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -39,3 +39,21 @@ section{
     background-color: white;
 
 }
+
+@mixin mobile{
+    @media (max-width: 768px){
+        @content;
+    }
+}
+
+@mixin tablet{
+    @media (max-width: 1024px){
+        @content;
+    }
+}
+
+@mixin desktop{
+    @media (min-width: 1366px){
+        @content;
+    }
+}
