--- a/src/scss/slidebar.scss
+++ b/src/scss/slidebar.scss
@@ -1,8 +1,5 @@
 .slidebar {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   background-color: white;
   color:#2D3250;
 
@@ -13,6 +10,7 @@
     bottom: 0;
     width: 300px;
     background: #D3D3D3;
+    z-index: 999;
 
     .links {
       position: absolute;
@@ -23,7 +21,7 @@
       align-items: center;
       justify-content: center;
       gap: 20px;
-
+      z-index: 999;
       a {
         font-size: 30px;
         font-weight: bold;
@@ -36,10 +34,10 @@
     height: 10px;
     border-radius: 100%;
     position: fixed;
-    top: 25px;
     left: 25px;
     background-color: transparent;
     border: none;
     cursor: pointer;
+    z-index: 999;
   }
 }
