--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -2,7 +2,7 @@
 
 .hero {
   height: calc(100vh - 70px);
-  
+
   overflow: hidden;
   background: linear-gradient(180deg, #2d3250, #050a23);
   position: relative;
@@ -11,61 +11,75 @@
     max-width: 1266px;
     height: 100%;
     margin: auto;
-    
-    
+
+    @include mobile {
+      display: flex;
+      align-items: center;
+      text-align: center;
+      flex-direction: column;
+      margin-left: 0;
+      justify-items: center;
+    }
 
     .textContainer {
-      width: 100%;
+      width: 60%;
       height: 100%;
       display: flex;
-      margin-left:10vh;
+      margin-left: 5vh;
       flex-direction: column;
       justify-content: center;
-      justify-items: center ;
+      justify-items: center;
       gap: 40px;
-      
-      @include mobile{
+
+      @include mobile {
         height: 50%;
         width: 80%;
-        gap:20px;
+        gap: 20px;
+        margin-left: 0vh;
         align-items: center;
         text-align: center;
-        margin-left: 5vh;
       }
-    
 
-    h2 {
-      font-size: 30px;
-      color: #f6b17a;
-      letter-spacing: 10px;
-      @include mobile{
-        font-size: 36px;
+      h2 {
+        font-size: 30px;
+        color: #f6b17a;
+        letter-spacing: 10px;
+        @include mobile {
+          font-size: 20px;
+        }
       }
-    }
-    h1 {
-      font-size: 70px;
-      @include mobile{
-        font-size: 36px;
+      h1 {
+        font-size: 70px;
+        @include mobile {
+          font-size: 36px;
+        }
       }
-    }
 
-    .buttons {
-      button {
-        padding: 20px;
-        border: 1px solid whitesmoke;
-        border-radius: 10px;
-        background-color: transparent;
-        color: whitesmoke;
-        margin-right: 20px;
-        cursor: pointer;
-        font-weight: 300;
+      .buttons {
+        @include mobile {
+          display: flex;
+          gap: 20px;
+        }
+        button {
+          padding: 20px;
+          border: 1px solid whitesmoke;
+          border-radius: 10px;
+          background-color: transparent;
+          color: whitesmoke;
+          margin-right: 20px;
+          cursor: pointer;
+          font-weight: bold;
+          font-size: 15px;
+          cursor: pointer;
+          z-index: 10;
 
-        @include mobile{
-            padding:15px;
+          @include mobile {
+            padding: 10px;
+            margin-right: 0px;
+          }
         }
       }
     }
-}
   }
 
   .imageContainer {
@@ -74,26 +88,35 @@
     top: 0;
     right: 10%;
 
-    @include mobile{
-        top:40%;
-        right:0
+    @include mobile {
+      width: 100%;
+      top: 35%;
+      right: 0%;
+      display: flex;
+      justify-content: center;
+      justify-items: center;
     }
 
-    .heroImg{
-        width: 70vh;
+    .heroImg {
+      width: 80vh;
 
-        @include mobile{
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
+      @include mobile {
+        scale: 0.8;
+        height: 100%;
+        object-fit: cover;
+      }
     }
   }
-  .slidingTextContainer{
+  .slidingTextContainer {
     position: absolute;
     font-size: 60vh;
     bottom: -100px;
     white-space: nowrap;
     color: rgba(245, 245, 245, 0.088);
+
+    @include mobile {
+      font-size: 50vh;
+      bottom:-10%;
+    }
   }
 }
