--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -44,9 +44,11 @@
       h2 {
         font-size: 30px;
         color: #f6b17a;
-        letter-spacing: 10px;
+        display: flex;
+        gap: 10px;
+        white-space: nowrap;
         @include mobile {
-          font-size: 20px;
+          font-size: 18px;
         }
       }
       h1 {
@@ -119,7 +121,7 @@
 
     @include mobile {
       font-size: 60vh;
-      bottom:-10%;
+      bottom: -10%;
     }
   }
 }
