--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -11,7 +11,7 @@
     max-width: 1266px;
     height: 100%;
     margin: auto;
-
+    
     @include mobile {
       display: flex;
       align-items: center;
@@ -64,22 +64,30 @@
           gap: 20px;
         }
         button {
-          padding: 20px;
-          border: 1px solid whitesmoke;
-          border-radius: 10px;
+          padding: 17px;
+          border: 2px solid whitesmoke;
+          border-radius: 100px;
           background-color: transparent;
           color: whitesmoke;
           margin-right: 20px;
           cursor: pointer;
           font-weight: bold;
-          font-size: 15px;
+          font-size: 17px;
           cursor: pointer;
           z-index: 10;
+          position: relative;
+
+        
 
           @include mobile {
             padding: 10px;
             margin-right: 0px;
+            font-size: 12px;
           }
+        }
+        button:hover {
+         scale: 1.1;
+
         }
       }
     }
@@ -98,6 +106,7 @@
       display: flex;
       justify-content: center;
       justify-items: center;
+      
     }
 
     .heroImg {
@@ -118,6 +127,7 @@
     color: rgba(245, 245, 245, 0.088);
     width: 90%;
     font-weight: bold;
+    z-index: 1;
 
     @include mobile {
       font-size: 60vh;
