--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -25,9 +25,17 @@
     }
 
     .icon {
-      width: 30px;
-      height: 30px;
+      width: 35px;
+      height: 35px;
       margin-right: 20px;
+
+      @include mobile {
+        width: 25px;
+        height: 25px;
+      }
+    }
+    .icon:hover {
+      scale: 1.1;
     }
     .top-text{
         font-size: 25px;
